client/src/App.css
.form-style-3{
    max-width: 450px;
    font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif;
    margin: 0 auto;
}
.form-style-3 label{
    display:block;
    margin-bottom: 10px;
}
.form-style-3 label > span{
    float: left;
    width: 100px;
    font-weight: bold;
    font-size: 15px;
    text-shadow: 1px 1px 1px #fff;
}
.form-style-3 fieldset{
    background: white;
    border-radius: 10px;
    -webkit-border-radius: 10px;
    -moz-border-radius: 10px;
    margin: 0px 0px 10px 0px;
    border: 1px solid #FFD2D2;
    padding: 20px;
    box-shadow: inset 0px 0px 15px #FFE5E5;
    -moz-box-shadow: inset 0px 0px 15px #FFE5E5;
    -webkit-box-shadow: inset 0px 0px 15px #FFE5E5;
}
.form-style-3 fieldset legend{
    border-top: 1px solid #FFD2D2;
    border-left: 1px solid #FFD2D2;
    border-right: 1px solid #FFD2D2;
    border-radius: 5px 5px 0px 0px;
    -webkit-border-radius: 5px 5px 0px 0px;
    -moz-border-radius: 5px 5px 0px 0px;
    padding: 0px 8px 3px 8px;
    box-shadow: -0px -1px 2px #F1F1F1;
    -moz-box-shadow:-0px -1px 2px #F1F1F1;
    -webkit-box-shadow:-0px -1px 2px #F1F1F1;
    font-weight: normal;
    font-size: 12px;
}
.form-style-3 textarea{
    width:250px;
    height:100px;
}
.form-style-3 input[type=text],
.form-style-3 input[type=date],
.form-style-3 input[type=datetime],
.form-style-3 input[type=number],
.form-style-3 input[type=search],
.form-style-3 input[type=time],
.form-style-3 input[type=url],
.form-style-3 input[type=email],
.form-style-3 select, 
.form-style-3 textarea{
    border-radius: 3px;
    -webkit-border-radius: 3px;
    -moz-border-radius: 3px;
    border: 1px solid #FFC2DC;
    outline: none;
    padding: 5px 8px 5px 8px;
    box-shadow: inset 1px 1px 4px #FFD5E7;
    -moz-box-shadow: inset 1px 1px 4px #FFD5E7;
    -webkit-box-shadow: inset 1px 1px 4px #FFD5E7;
    width:50%;
}
.form-style-3  input[type=submit],
.form-style-3  input[type=button]{
    border: 1px solid #C94A81;
    padding: 5px 15px 5px 15px;
    box-shadow: inset -1px -1px 3px #FF62A7;
    -moz-box-shadow: inset -1px -1px 3px #FF62A7;
    -webkit-box-shadow: inset -1px -1px 3px #FF62A7;
    border-radius: 3px;
    border-radius: 3px;
    -webkit-border-radius: 3px;
    -moz-border-radius: 3px;    
    font-weight: bold;
}
.required{
    color:red;
    font-weight:normal;
}


.select-field {
  width: 200px;
  height: 40px;
  font-size: 15px;
}

form input {
  width: 200px;
  height: 40px;
  font-size: 15px;
}

/* CUSTOM STYLES */

#pic {
  background-image: url('./pug_diving_in_water.jpg');
  width: 500px;
  height: 300px;
  background-size: contain;
  background-repeat: no-repeat;
  margin-left: 42%;
}

.form-field, .address-form {
  padding-top: 15px;
}

/* CUSTOM STYLES */


body {
  background-color: #B6FFEF;
}
nav {
  width: 100%;
  background-color: #555;
  padding: 10px 0;
}

nav a {
  margin: 10px;
  text-decoration: none;
  font-size: 18px;
  color: #B6FFEF;
}

nav a:hover {
  color: #7f4dd2;
}

a {
  color: black;
}

/*.footer {
  background-color: #555;
  position: absolute;
  bottom: 0;
  width: 100%;
  height: 20px;
}

.footer-text {
  color: #fff;
  font-size: 10px;
}*/

.shipping {
  font-size: .75em;
}

.space {
  margin: 15px 0;
}

.btn-primary {
  color: #fff;
  background-color: #11f;
  border-radius: 2px;
  border: none;
  padding: 3px;
}

.btn-primary:hover {
  background-color: #77f;
}

.error {
  background-color: pink;
  color: red;
  border: 1px solid red;
  border-radius: 2px;
  padding: 10px 30px;
  width: 75%;
  margin: 10px auto;
}

.success {
  background-color: #ceffce;
  color: green;
  border: 1px solid green;
  border-radius: 2px;
  padding: 10px 30px;
  width: 75%;
  margin: 10px auto;
}

.no-flash {
  visibility: hidden;
  padding: 10px 30px;
  width: 75%;
  margin: 10px auto;
}

.x-button {
  background-color: red;
  color: white;
  border-radius: 2px;
  float: right;
}

/* DEFAULT STYLES FROM CREATE REACT APP MODULE */
.App {
  text-align: center;
}

/*.App-logo {
  animation: App-logo-spin infinite 20s linear;
  height: 80px;
}*/

.App-header {
  height: 150px;
  padding: 20px;
  color: black;
  font-family: 'Lobster', cursive;
}

.App-title {
  font-size: 4em;
}

.App-intro {
  font-size: large;
}

/*@keyframes App-logo-spin {
  from { transform: rotate(0deg); }
  to { transform: rotate(360deg); }
}*/

